--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/ksherb1/learning-outcome-suggestion#readme",
   "dependencies": {
+    "express": "^4.16.1",
     "mongodb": "^2.2.31",
+    "request": "^2.83.0",
     "socket.io": "^2.0.3"
   }
 }
