--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.1",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
+    "mysql": "^2.15.0",
     "request": "^2.83.0",
     "socket.io": "^2.0.3"
   }
