--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "mongodb": "^2.2.31",
     "mysql": "^2.15.0",
     "request": "^2.83.0",
-    "socket.io": "^2.0.3",
-    "typescript": "^2.5.3"
+    "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "typescript": "^2.5.3",
+    "@types/mongodb": "^2.2.13"
   }
 }
