--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ksherb1/learning-outcome-suggestion#readme",
   "dependencies": {
+    "config": "^1.26.2",
     "express": "^4.16.1",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
@@ -30,7 +31,12 @@
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
-    "typescript": "^2.5.3",
-    "@types/mongodb": "^2.2.13"
+    "@types/config": "0.0.33",
+    "@types/express": "^4.0.37",
+    "@types/line-reader": "0.0.28",
+    "@types/mongodb": "^2.2.13",
+    "@types/mysql": "0.0.34",
+    "@types/socket.io": "^1.4.31",
+    "typescript": "^2.5.3"
   }
 }
