Write scripts to fill database with old heroku data
Also refactors how raw data and scripts to work with it are stored. Git is configured to ignore any files in dbcontent/rawdata, where original data like NCWF pdfs or MySQL dumps should go.

Resolves #1

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
 /db
 /dist
-/standard-outcome/NIST.SP.800-181.pdf
-/standard-outcome/NIST.SP.800-181.txt
+/dbcontent/rawdata
 /src/db.test.ts
