--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -p ts/",
     "build:watch": "tsc -p ts/ -w",
-    "setup": "node db-setup.script.js",
+    "setup": "node js/script/db-setup.script.js",
     "prestart": "mongod -f mongod.conf",
     "start": "npm run build:watch",
     "stop": "mongod -f mongod.conf --shutdown",
@@ -25,6 +25,7 @@
   "dependencies": {
     "config": "^1.26.2",
     "express": "^4.16.1",
+    "jsonfile": "^4.0.0",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
     "mysql": "^2.15.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/config": "0.0.33",
     "@types/express": "^4.0.37",
+    "@types/jsonfile": "^4.0.0",
     "@types/line-reader": "0.0.28",
     "@types/mongodb": "^2.2.13",
     "@types/mysql": "0.0.34",
