--- a/Dockerfile.setup
+++ b/Dockerfile.setup
@@ -11,6 +11,7 @@ ADD js .
 ADD taxonomy.json taxonomy.json
 ADD dbcontent/Dump20171010.dat dbcontent/
 ADD dbcontent/NIST.SP.800-181.dat dbcontent/
+ADD dbcontent/NIST.SP.800-181.tasks.dat dbcontent/
 ADD dbcontent/CAE-CD_Knowledge_Units.dat dbcontent/
 
 # Install any needed packages specified in package.json
