Extract CS2013 outcomes
Going from an .xls document I found on Stanford's website. Not 100% how official it is, but it seemed to match the official publication at a cursory glance.

Resolves to #5

--- a/Dockerfile.setup
+++ b/Dockerfile.setup
@@ -13,6 +13,7 @@ ADD dbcontent/Dump20171010.dat dbcontent/
 ADD dbcontent/NIST.SP.800-181.dat dbcontent/
 ADD dbcontent/NIST.SP.800-181.tasks.dat dbcontent/
 ADD dbcontent/CAE-CD_Knowledge_Units.dat dbcontent/
+ADD dbcontent/CS_2013_Learning_Outcomes.dat dbcontent/
 
 # Install any needed packages specified in package.json
 # TODO: It may be more 'correct' to leave off the --only flag
