--- a/Dockerfile.setup
+++ b/Dockerfile.setup
@@ -6,21 +6,18 @@ WORKDIR /app
 
 # Copy the files needed for production into the container at /app
 ADD package.json .
-ADD config config
-ADD js .
 ADD taxonomy.json taxonomy.json
-ADD dbcontent/Dump20171010.dat dbcontent/
-ADD dbcontent/NIST.SP.800-181.dat dbcontent/
-ADD dbcontent/NIST.SP.800-181.tasks.dat dbcontent/
-ADD dbcontent/CAE-CD_Knowledge_Units.dat dbcontent/
-ADD dbcontent/CS_2013_Learning_Outcomes.dat dbcontent/
+ADD js .
+ADD dbcontent/*.dat dbcontent/
 
 # Install any needed packages specified in package.json
-# TODO: It may be more 'correct' to leave off the --only flag
-#       and set NODE_ENV to 'production' (whatever *that* means)
-# I think it's something like this, but no guarantees:
-#   ENV NODE_ENV=production
 RUN npm install --only=prod
+
+# set default values for clark environment variables
+#   change at runtime with "-e key=value" options
+ENV CLARK_DB="172.17.0.2:27017"
+
+# NOTE: consider using "-e NODE_ENV=production" for live instances
 
 # run the scripts to setup the database
 CMD ["npm", "run", "setup"]
