--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "learning-outcome-suggestion",
+  "name": "database-interaction",
   "version": "1.0.0",
-  "description": "Semantic search to recommend related learning outcomes in Bloomin Onion",
-  "main": "src/lo-suggestion.service.ts",
+  "description": "Database interaction service to ensure consistent behavior over all services.",
+  "main": "src/db-interaction.service.ts",
   "scripts": {
     "build": "tsc -p ts/",
     "build:watch": "tsc -p ts/ -w",
-    "setup": "node script/db-setup.script.js",
-    "compare": "node js/script/lo-suggestion.compare.js",
+    "setup": "node js/script/db-setup.script.js",
     "prestart": "mongod -f mongod.conf",
     "start": "npm run build:watch",
     "stop": "mongod -f mongod.conf --shutdown",
@@ -15,29 +14,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cyber4All/learning-outcome-suggestion.git"
+    "url": "git+https://github.com/Cyber4All/database-interaction.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Cyber4All/learning-outcome-suggestion/issues"
+    "url": "https://github.com/Cyber4All/database-interaction/issues"
   },
-  "homepage": "https://github.com/Cyber4All/learning-outcome-suggestion#readme",
+  "homepage": "https://github.com/Cyber4All/database-interaction#readme",
   "dependencies": {
-    "express": "^4.16.1",
     "jsonfile": "^4.0.0",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
-    "mysql": "^2.15.0",
-    "request": "^2.83.0",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
-    "@types/express": "^4.0.37",
     "@types/jsonfile": "^4.0.0",
     "@types/line-reader": "0.0.28",
     "@types/mongodb": "^2.2.13",
-    "@types/mysql": "0.0.34",
     "@types/socket.io": "^1.4.31",
     "@types/socket.io-client": "^1.4.31",
     "typescript": "^2.5.3"
