Glue schema/entities for text-search functions
In other words, add a "suggestOutcomes" function which handles converting mongodb search results to an Outcome[], so that lo-suggestion doesn't have to.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Cyber4All/database-interaction#readme",
   "dependencies": {
+    "assert-never": "^1.0.0",
     "jsonfile": "^4.0.0",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
