--- a/Dockerfile.setup
+++ b/Dockerfile.setup
@@ -7,7 +7,7 @@ WORKDIR /app
 # Copy the files needed for production into the container at /app
 ADD package.json .
 ADD taxonomy.json taxonomy.json
-ADD js .
+ADD js js/
 ADD dbcontent/*.dat dbcontent/
 
 # Install any needed packages specified in package.json
