--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 /node_modules
 /entity
 /taxonomy
+/dist
 /db
-/js
 /dbcontent/rawdata
-/ts/script/db.test.ts
-/ts/script/lo-suggestion.test.ts
+/test
