--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "../js",
+      "outDir": "dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "lib": [ "es2015", "dom" ],
