--- a/lo-suggestion/Dockerfile
+++ b/lo-suggestion/Dockerfile
@@ -23,7 +23,10 @@ RUN apk del .gyp
 
 # set default values for clark environment variables
 #   change at runtime with "-e key=value" options
-ENV CLARK_DB="172.17.0.2:27017"
+ENV CLARK_DB_IP="172.17.0.2"
+ENV CLARK_DB_PORT="27017"
+ENV CLARK_LO_SUGGESTION_PORT="27015"
+ENV CLARK_LO_SUGGESTION_THRESHOLD="1.25"
 
 # NOTE: consider using "-e NODE_ENV=production" for live instances
 
