--- a/lo-suggestion/Dockerfile
+++ b/lo-suggestion/Dockerfile
@@ -23,8 +23,7 @@ RUN apk del .gyp
 
 # set default values for clark environment variables
 #   change at runtime with "-e key=value" options
-ENV CLARK_DB_IP="172.17.0.2"
-ENV CLARK_DB_PORT="27017"
+ENV CLARK_DB_URI="mongodb://172.17.0.2:27017/onion"
 ENV CLARK_LO_SUGGESTION_PORT="27015"
 ENV CLARK_LO_SUGGESTION_THRESHOLD="1.25"
 
