--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "assert-never": "^1.0.0",
     "bcrypt": "^1.0.3",
+    "express": "^4.16.2",
     "jsonfile": "^4.0.0",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
+    "@types/express": "^4.0.39",
     "@types/jsonfile": "^4.0.0",
     "@types/line-reader": "0.0.28",
     "@types/mongodb": "^2.2.13",
