--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonfile": "^4.0.0",
     "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
+    "node-env-file": "^0.1.8",
     "socket.io": "^2.0.3",
     "source-map-support": "^0.5.0"
   },
