--- a/db-interactor/Dockerfile
+++ b/db-interactor/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 
 # Copy all required JavaScript files from dist into root
 ADD dist/*.js* ./
+ADD dist/drivers/ drivers/
+ADD dist/interfaces/ interfaces/
 ADD dist/db-interactor/ db-interactor/
 ADD dist/entity/ entity/
 ADD dist/schema/ schema/
