--- a/db-setup/Dockerfile
+++ b/db-setup/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 
 # Copy all required JavaScript files from dist into root
 ADD dist/*.js* ./
+ADD dist/drivers/ drivers/
+ADD dist/interfaces/ interfaces/
 ADD dist/db-setup/ db-setup/
 ADD dist/entity/ entity/
 ADD dist/schema/ schema/
