--- a/lo-suggestion/Dockerfile
+++ b/lo-suggestion/Dockerfile
@@ -14,6 +14,7 @@ ADD dist/schema/ schema/
 ADD dist/taxonomy/ taxonomy/
 # Copy any other required files
 ADD taxonomy/taxonomy.json taxonomy/
+ADD .env ./
 
 # Install any needed packages specified in package.json
 ENV NODE_ENV=production
