--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm run build
       
       # build docker images
       - run: docker build -t cyber4all/db-interactor:$VERSION_NUM.$CIRCLE_BUILD_NUM -t cyber4all/db-interactor:latest -f "db-interactor/Dockerfile" .
