--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,8 +58,8 @@ jobs:
       - run: docker run -d -p 27015:27015 cyber4all/lo-suggestion:latest
       # run tests
       # TODO: circleci has some sort of test association
-      - run: node dist/test/db-interactor
-      - run: node dist/test/lo-suggestion
+      - run: node dist/test/db-interactor.tape.js
+      - run: node dist/test/lo-suggestion.tape.js
 
       #
       # DEPLOY
