--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+      - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
@@ -49,14 +49,13 @@ jobs:
       #
 
       # start local database via Docker image
-      - run: docker run -d -p 27017:27017 mongo
+      #- run: docker run -d -p 27017:27017 mongo
       # initialize database
       - run: node dist/db-setup/db-init.script.js
       - run: node dist/test/setup.script.js
       # start microservices
       - run: docker run -d -p 27016:27016 cyber4all/db-interactor:latest
       - run: docker run -d -p 27015:27015 cyber4all/lo-suggestion:latest
-      - run: docker ps
       # run tests
       # TODO: circleci has some sort of test association
       - run: node dist/test/db-interactor.tape.js
@@ -88,7 +87,7 @@ jobs:
             echo 'Stopping old service:';
             docker stop \$(docker ps -a -q --filter ancestor=cyber4all/db-interactor:latest --format='{{.ID}}');
             echo 'Starting new service:'
-            docker run -d -p 27016:27016 -e CLARK_DB_URI='$CLARK_DB_URI' cyber4all/db-interactor:latest;
+            docker run -d -p 27016:27016 -e CLARK_DB_URI='$ATLAS_URI' cyber4all/db-interactor:latest;
           "
       - run: |
           ssh -i database-interaction.pem ec2-user@ec2-54-92-208-221.compute-1.amazonaws.com \
@@ -98,7 +97,7 @@ jobs:
             echo 'Stopping old service:';
             docker stop \$(docker ps -a -q --filter ancestor=cyber4all/lo-suggestion:latest --format='{{.ID}}');
             echo 'Starting new service:'
-            docker run -d -p 27015:27015 -e CLARK_DB_URI='$CLARK_DB_URI' cyber4all/lo-suggestion:latest;
+            docker run -d -p 27015:27015 -e CLARK_DB_URI='$ATLAS_URI' cyber4all/lo-suggestion:latest;
           "
       # delete ssh key file (totally unnecessary but a good reminder it's not quite safe)
       - run: rm database-interaction.pem
