--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,10 +56,11 @@ jobs:
       # start microservices
       - run: docker run -d -p 27016:27016 cyber4all/db-interactor:latest
       - run: docker run -d -p 27015:27015 cyber4all/lo-suggestion:latest
+      - run: docker ps
       # run tests
       # TODO: circleci has some sort of test association
-      - run: node dist/test/db-interactor.tape.js
-      - run: node dist/test/lo-suggestion.tape.js
+      - run: docker run circleci/node dist/test/db-interactor.tape.js
+      - run: docker run circleci/node dist/test/lo-suggestion.tape.js
 
       #
       # DEPLOY
