--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,19 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/node
+    machine: true
+    #docker:
+      #- image: circleci/node
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      - image: circleci/mongo:3.4.4
+      #- image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
     steps:
-      - setup_remote_docker
+      #- setup_remote_docker
       - checkout
 
       #
@@ -49,7 +50,7 @@ jobs:
       #
 
       # start local database via Docker image
-      #- run: docker run -d -p 27017:27017 mongo
+      - run: docker run -d -p 27017:27017 mongo
       # initialize database
       - run: node dist/db-setup/db-init.script.js
       - run: node dist/test/setup.script.js
@@ -59,8 +60,8 @@ jobs:
       - run: docker ps
       # run tests
       # TODO: circleci has some sort of test association
-      - run: docker run circleci/node dist/test/db-interactor.tape.js
-      - run: docker run circleci/node dist/test/lo-suggestion.tape.js
+      - run: node dist/test/db-interactor.tape.js
+      - run: node dist/test/lo-suggestion.tape.js
 
       #
       # DEPLOY
