--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,8 @@ jobs:
     working_directory: ~/repo
 
     steps:
-      #- setup_remote_docker
+      #- setup_remote_docker # for docker executor only
+      - npm install npm@latest -g
       - checkout
 
       #
@@ -57,7 +58,6 @@ jobs:
       # start microservices
       - run: docker run -d -p 27016:27016 cyber4all/db-interactor:latest
       - run: docker run -d -p 27015:27015 cyber4all/lo-suggestion:latest
-      - run: docker ps
       # run tests
       # TODO: circleci has some sort of test association
       - run: node dist/test/db-interactor.tape.js
