--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       #- setup_remote_docker # for docker executor only
-      - npm install npm@latest -g
+      - run: npm install npm@latest -g
       - checkout
 
       #
