--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@ jobs:
 
     steps:
       #- setup_remote_docker # for docker executor only
-      - run: npm install npm@latest -g
+      #- run: npm install npm@latest -g
+      - run: nvm install node; nvm use node
       - checkout
 
       #
