--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       #- setup_remote_docker # for docker executor only
       #- run: npm install npm@latest -g
-      - run: nvm install node; nvm use node
+      - run: npm install -g n; n stable
       - checkout
 
       #
