--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,27 +19,27 @@ jobs:
     steps:
       #- setup_remote_docker # for docker executor only
       #- run: npm install npm@latest -g
-      - run: npm install -g n; n stable
+      #- run: npm install -g n; n stable
       - checkout
+      # Throw in the other required packages
+      - run: git clone https://github.com/Cyber4All/taxonomy.git
+      - run: git clone https://github.com/Cyber4All/entity.git
 
       #
       # BUILD
       #
 
       # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+      #- restore_cache:
+      #    keys:
+      #    - v1-dependencies-{{ checksum "package.json" }}
+      #    # fallback to using the latest cache if no exact match is found
+      #    - v1-dependencies-
       - run: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      # Throw in the other required packages
-      - run: git clone https://github.com/Cyber4All/taxonomy.git
-      - run: git clone https://github.com/Cyber4All/entity.git
       # Transpile to typescript
       - run: npm run build
       
