--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "bcrypt": "^1.0.3",
     "clark-entity": "^1.0.13",
     "express": "^4.16.2",
-    "jsonfile": "^4.0.0",
-    "line-reader": "^0.4.0",
     "mongodb": "^2.2.31",
     "node-env-file": "^0.1.8",
     "request-promise": "^4.2.2",
@@ -44,6 +42,8 @@
     "@types/mongodb": "^2.2.13",
     "@types/request-promise": "^4.1.39",
     "@types/tape": "^4.2.31",
+    "cors": "^2.8.4",
+    "line-reader": "^0.4.0",
     "tape": "^4.8.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
