--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "express": "^4.16.2",
     "mongodb": "^2.2.31",
     "node-env-file": "^0.1.8",
-    "request-promise": "^4.2.2",
     "source-map-support": "^0.5.0"
   },
   "devDependencies": {
@@ -40,10 +39,13 @@
     "@types/jsonfile": "^4.0.0",
     "@types/line-reader": "0.0.28",
     "@types/mongodb": "^2.2.13",
+    "@types/oboe": "^2.0.28",
     "@types/request-promise": "^4.1.39",
     "@types/tape": "^4.2.31",
     "cors": "^2.8.4",
     "line-reader": "^0.4.0",
+    "oboe": "^2.1.4",
+    "request-promise": "^4.2.2",
     "tape": "^4.8.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
