--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "assert-never": "^1.0.0",
     "bcrypt": "^1.0.3",
     "clark-entity": "^1.0.16",
+    "clark-schema": "^1.0.2",
     "clark-taxonomy": "^1.0.14",
     "express": "^4.16.2",
     "mongodb": "^2.2.31",
