--- a/package.json
+++ b/package.json
@@ -2,17 +2,12 @@
   "name": "database-interaction",
   "version": "1.0.0",
   "description": "Database interaction service to ensure consistent behavior over all services.",
-  "main": "src/db-interaction.service.ts",
+  "main": "app.ts",
   "scripts": {
-    "build": "tsc -p .",
-    "build:watch": "tsc -p . -w",
-    "build:docker": "sh docker_build.sh",
-    "localdb": "mongod -f mongod.conf",
-    "db-setup": "sh db-setup_portal.sh",
-    "db-interactor": "node dist/db-interactor/db-interaction.service.js",
-    "lo-suggestion": "node dist/lo-suggestion/lo-suggestion.service.js",
-    "start": "echo \"Error: no start specified\" && exit 1",
-    "test": "sh test_portal.sh"
+    "start": "npm run gulp-tsc",
+    "db-setup": "npm run build && node ./dist/db-setup/db-setup.script.js",
+    "build": "node_modules/.bin/gulp tsc",
+    "gulp-tsc": "node_modules/.bin/gulp start"
   },
   "repository": {
     "type": "git",
@@ -30,13 +25,18 @@
     "clark-entity": "^1.0.16",
     "clark-schema": "^1.0.2",
     "clark-taxonomy": "^1.0.14",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-typescript": "^3.1.7",
     "mongodb": "^2.2.31",
     "node-env-file": "^0.1.8",
     "source-map-support": "^0.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
+    "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.39",
     "@types/jsonfile": "^4.0.0",
     "@types/line-reader": "0.0.28",
