--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Cyber4All/database-interaction#readme",
   "dependencies": {
+    "@types/morgan": "^1.7.35",
     "assert-never": "^1.0.0",
     "bcrypt": "^1.0.3",
     "clark-entity": "^1.0.16",
@@ -31,6 +32,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^3.1.7",
     "mongodb": "^2.2.31",
+    "morgan": "^1.9.0",
     "node-env-file": "^0.1.8",
     "source-map-support": "^0.5.0"
   },
