--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "homepage": "https://github.com/Cyber4All/database-interaction#readme",
   "dependencies": {
+    "@cyber4all/clark-entity": "^1.0.20",
+    "@cyber4all/clark-schema": "^1.0.4",
+    "@cyber4all/clark-taxonomy": "^1.0.16",
     "@types/express-jwt": "0.0.38",
     "@types/morgan": "^1.7.35",
     "assert-never": "^1.0.0",
     "bcrypt": "^1.0.3",
-    "clark-entity": "^1.0.16",
-    "clark-schema": "^1.0.2",
-    "clark-taxonomy": "^1.0.14",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
