--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@cyber4all/clark-entity": "^1.0.20",
     "@cyber4all/clark-schema": "^1.0.5",
-    "@cyber4all/clark-taxonomy": "^1.0.16",
+    "@cyber4all/clark-taxonomy": "1.0.16",
     "@types/express-jwt": "0.0.38",
     "@types/morgan": "^1.7.35",
     "assert-never": "^1.0.0",
