--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npm run gulp-tsc",
     "db-setup": "npm run build && node ./dist/db-setup/db-setup.script.js",
     "build": "node_modules/.bin/gulp tsc",
-    "gulp-tsc": "node_modules/.bin/gulp start"
+    "gulp-tsc": "node_modules/.bin/gulp start",
+    "pack": "npm run build && cp ./package.json ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
+    "deploy": "eb deploy Learning-Object-Service-Production --profile clark"
   },
   "repository": {
     "type": "git",
