--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -4,9 +4,8 @@ branch-defaults:
 global:
   application_name: CLARK
   default_ec2_keyname: null
-  default_platform: >-
-    arn:aws:elasticbeanstalk:us-east-1::platform/Node.js running on 64bit Amazon
-    Linux/4.3.0
+  default_platform: arn:aws:elasticbeanstalk:us-east-1::platform/Node.js running on
+    64bit Amazon Linux/4.3.0
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
