--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/morgan": "^1.7.35",
     "assert-never": "^1.0.0",
     "bcrypt": "^1.0.3",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.39",
     "@types/jsonfile": "^4.0.0",
